--- a/style.css
+++ b/style.css
@@ -58,13 +58,18 @@ personalGallery{
     padding-right: 8vw;
     gap: 15px;
     display: grid;
-    grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );;
+    grid-template-columns:1fr 1fr 1fr 1fr;
     justify-items: center;
 }
+
+#wide{
+    grid-column: span 2;
+}
+
 .personalThumbnail{
+    object-position: center top;
     width: 100%;
     height: 100%;
-    
     object-fit:contain;
 }
 
