--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ process{
 }
 
 .processImage{
-    object-fit: cover;
+    object-fit: contain;
     margin-bottom: 1.5vw;
     width: 80vw;
     height: 80vh;
